--- a/package.json
+++ b/package.json
@@ -1,46 +1,73 @@
 {
-  "name": "vue-audio-soundcloud",
-  "version": "0.1.0",
-  "private": true,
+  "name": "vue2-siema",
+  "version": "0.2.0",
+  "description": "Vue component for siema",
+  "main": "dist/vue2-siema.umd.js",
+  "module": "dist/vue2-siema.esm.js",
+  "unpkg": "dist/vue2-siema.min.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "npm run build:browser && npm run build:es && npm run build:umd",
+    "build:browser": "rollup --config build/rollup.config.browser.js",
+    "build:es": "rollup --config build/rollup.config.es.js",
+    "build:umd": "rollup --config build/rollup.config.umd.js",
+    "prepublishOnly": "npm run build",
+    "dev": "nodemon --exec 'npm run build:es' --watch src",
+    "devb": "nodemon --exec 'npm run build:browser' --watch src",
+    "serve": "serve ./dist"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sainf/vue2-siema.git"
+  },
+  "keywords": [
+    "vue",
+    "siema",
+    "lightweight",
+    "carousel",
+    "slider"
+  ],
+  "author": "Avelino Nogueira",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/sainf/vue2-siema/issues"
+  },
+  "homepage": "https://github.com/sainf/vue2-siema#readme",
   "dependencies": {
-    "axios": "^0.18.0",
-    "vue": "^2.5.16"
+    "siema": "^1.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.3",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.3",
-    "@vue/cli-service": "^3.0.0-rc.3",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "cross-env": "^5.1.6",
+    "eslint": "^4.19.1",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-vue": "^4.5.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-html": "^4.0.3",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "nodemon": "^1.17.5",
+    "rollup": "^0.59.4",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-css-only": "^0.4.0",
+    "rollup-plugin-css-porter": "^0.1.2",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-stylus-css-modules": "^1.5.0",
+    "rollup-plugin-uglify": "^4.0.0",
+    "rollup-plugin-vue": "^4.2.0",
+    "serve": "^7.2.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "uglify-es": "^3.3.9",
     "vue-template-compiler": "^2.5.16"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
